1.8.0/_sources/examples_built/reconstruction/histology_resdnn.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples_built/reconstruction/histology_resdnn.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_built_reconstruction_histology_resdnn.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_built_reconstruction_histology_resdnn.py:


.. histology_resdnn:

==================================================
Local reconstruction using the Histological ResDNN
==================================================

A data-driven approach to modeling the non-linear mapping between observed
DW-MRI signals and ground truth structures using sequential deep neural network
regression with residual block deep neural network (ResDNN) [1, 2].

Training was performed on two 3-D histology datasets of squirrel monkey brains
and validated on a third. A second validation was performed on HCP datasets.

.. GENERATED FROM PYTHON SOURCE LINES 15-34

.. code-block:: default


    import os

    import numpy as np
    import scipy.ndimage as ndi

    from dipy.core.gradients import gradient_table
    from dipy.data import get_fnames, get_sphere
    from dipy.io.image import load_nifti, save_nifti
    from dipy.io.gradients import read_bvals_bvecs
    from dipy.nn.histo_resdnn import HistoResDNN
    from dipy.reconst.shm import sh_to_sf_matrix
    from dipy.segment.mask import median_otsu
    from dipy.viz import window, actor


    # Disable oneDNN warning
    os.environ['TF_CPP_MIN_LOG_LEVEL'] = '2'








.. GENERATED FROM PYTHON SOURCE LINES 35-37

This ResDNN model requires single-shell data with one or more b0s, the data is
fetched and a gradient table is constructed from bvals/bvecs.

.. GENERATED FROM PYTHON SOURCE LINES 37-46

.. code-block:: default



    # Fetch DWI and GTAB
    hardi_fname, hardi_bval_fname, hardi_bvec_fname = get_fnames('stanford_hardi')
    data, affine = load_nifti(hardi_fname)
    data = np.squeeze(data)
    bvals, bvecs = read_bvals_bvecs(hardi_bval_fname, hardi_bvec_fname)
    gtab = gradient_table(bvals, bvecs)








.. GENERATED FROM PYTHON SOURCE LINES 47-49

To accelerate computation, a brain mask must be computed. The resulting mask is
saved for visual inspection.

.. GENERATED FROM PYTHON SOURCE LINES 49-62

.. code-block:: default



    mean_b0 = data[..., gtab.b0s_mask]
    mean_b0 = np.mean(mean_b0, axis=-1)
    _, mask = median_otsu(mean_b0)

    mask_labeled, _ = ndi.label(mask)
    unique, count = np.unique(mask_labeled, return_counts=True)
    val = unique[np.argmax(count[1:])+1]
    mask[mask_labeled != val] = 0

    save_nifti('mask.nii.gz', mask.astype(np.uint8), affine)








.. GENERATED FROM PYTHON SOURCE LINES 63-65

Using a ResDNN for sh_order 8 (default) and load the appropriate weights.
Fit the data and save the resulting fODF.

.. GENERATED FROM PYTHON SOURCE LINES 65-73

.. code-block:: default



    resdnn_model = HistoResDNN(verbose=True)
    resdnn_model.fetch_default_weights()
    predicted_sh = resdnn_model.predict(data, gtab, mask=mask)

    save_nifti('predicted_sh.nii.gz', predicted_sh, affine)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

     1/32 [..............................] - ETA: 2s    32/32 [==============================] - 0s 714us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 758us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 766us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 689us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 700us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 685us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 688us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 676us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 746us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 883us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 814us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 692us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 705us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 714us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 696us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 634us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 664us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 714us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 676us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 644us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 695us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 624us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 698us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 704us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 731us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 656us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 696us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 709us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 678us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 639us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 710us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 709us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 648us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 704us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 668us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 646us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 732us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 697us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 687us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 671us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 655us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 670us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 703us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 698us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 733us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 689us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 705us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 659us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 693us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 718us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 728us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 682us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 685us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 684us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 692us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 685us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 725us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 696us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 700us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 672us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 731us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 690us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 739us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 709us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 696us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 698us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 629us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 720us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 687us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 723us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 732us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 692us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 700us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 676us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 686us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 725us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 694us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 659us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 711us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 679us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 651us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 691us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 700us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 678us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 687us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 679us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 707us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 681us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 685us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 749us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 739us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 687us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 699us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 690us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 693us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 679us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 689us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 680us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 686us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 690us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 689us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 646us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 734us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 698us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 693us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 643us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 684us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 672us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 716us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 693us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 680us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 726us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 632us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 654us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 729us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 687us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 683us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 693us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 705us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 691us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 655us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 730us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 713us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 684us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 701us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 697us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 671us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 667us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 703us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 898us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 971us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 676us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 712us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 695us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 704us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 727us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 711us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 685us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 685us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 684us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 688us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 694us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 713us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 727us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 696us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 683us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 698us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 658us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 726us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 711us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 667us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 689us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 674us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 693us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 662us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 721us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 685us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 704us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 693us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 694us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 678us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 717us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 686us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 679us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 695us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 714us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 676us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 728us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 657us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 682us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 691us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 695us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 693us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 687us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 700us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 692us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 672us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 698us/step
     1/32 [..............................] - ETA: 0s    32/32 [==============================] - 0s 677us/step
    1/8 [==>...........................] - ETA: 0s    8/8 [==============================] - 0s 712us/step




.. GENERATED FROM PYTHON SOURCE LINES 74-76

Preparing the scene using FURY. The ODF slicer and the background image are
added as actors and a mid-coronal slice is selected.

.. GENERATED FROM PYTHON SOURCE LINES 76-103

.. code-block:: default



    interactive = False
    sphere = get_sphere('repulsion724')
    B, invB = sh_to_sf_matrix(sphere, sh_order=8,
                              basis_type=resdnn_model.basis_type, smooth=0.0006)
    fod_spheres = actor.odf_slicer(predicted_sh, sphere=sphere,
                                   scale=0.6, norm=True, mask=mask, B_matrix=B)

    mean_sh = np.mean(predicted_sh, axis=-1)
    background_img = actor.slicer(mean_sh, opacity=0.5,
                                  interpolation='nearest')

    # Select the mid coronal slice for slicer
    ori_shape = mask.shape[0:3]
    slice_index = ori_shape[1] // 2
    fod_spheres.display_extent(0, ori_shape[0],
                               slice_index, slice_index,
                               0, ori_shape[2])
    background_img.display_extent(0, ori_shape[0],
                                  slice_index, slice_index,
                                  0, ori_shape[2])

    scene = window.Scene()
    scene.add(fod_spheres)
    scene.add(background_img)








.. GENERATED FROM PYTHON SOURCE LINES 104-107

Adjusting the camera for a nice zoom-in of the corpus callosum (coronal) to
screenshot the resulting prediction. FODF should be aligned with the curvature
of the corpus callosum and a single-fiber population should be visible.

.. GENERATED FROM PYTHON SOURCE LINES 107-133

.. code-block:: default



    camera = {
        'zoom_factor': 0.85,
        'view_position': np.array([
            (ori_shape[0] - 1) / 2.0,
            max(ori_shape),
            (ori_shape[2] - 1) / 1.5]),
        'view_center': np.array([
            (ori_shape[0] - 1) / 2.0,
            slice_index,
            (ori_shape[2] - 1) / 1.5]),
        'up_vector': np.array([0.0, 0.0, 1.0]),
    }

    scene.set_camera(position=camera['view_position'],
                     focal_point=camera['view_center'],
                     view_up=camera['up_vector'])
    scene.zoom(camera['zoom_factor'])

    if interactive:
        window.show(scene, reset_camera=False)

    window.record(scene, out_path='pred_fODF.png', size=(1000, 1000),
                  reset_camera=False)




.. image-sg:: /examples_built/reconstruction/images/sphx_glr_histology_resdnn_001.png
   :alt: histology resdnn
   :srcset: /examples_built/reconstruction/images/sphx_glr_histology_resdnn_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 134-138

.. figure:: pred_fODF.png
   :align: center

   Visualization of the predicted fODF.

.. GENERATED FROM PYTHON SOURCE LINES 141-156

References
----------
..  [1] Nath, V., Schilling, K. G., Parvathaneni, P., Hansen,
    C. B., Hainline, A. E., Huo, Y., ... & Stepniewska, I. (2019).
    Deep learning reveals untapped information for local white-matter
    fiber reconstruction in diffusion-weighted MRI.
    Magnetic resonance imaging, 62, 220-227.
..  [2] Nath, V., Schilling, K. G., Hansen, C. B., Parvathaneni,
    P., Hainline, A. E., Bermudez, C., ... & Stępniewska, I. (2019).
    Deep learning captures more accurate diffusion fiber orientations
    distributions than constrained spherical deconvolution.
    arXiv preprint arXiv:1911.07927.

.. include:: ../links_names.inc


.. GENERATED FROM PYTHON SOURCE LINES 158-160

.. include:: ../../links_names.inc



.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 38.202 seconds)


.. _sphx_glr_download_examples_built_reconstruction_histology_resdnn.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: histology_resdnn.py <histology_resdnn.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: histology_resdnn.ipynb <histology_resdnn.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
